--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="/assets/js/js.js" defer></script>
 </head>
 
 <body>
