Botones y algo de estilo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <div>
         <h1 style="text-align: center;">Etch-a-Sketch</h1>
     </div>
+    <div class="botones">
+        <button class="btn btn-primary">Color</button>
+        <button class="btn btn-primary">Arcoiris</button>
+        <button class="btn btn-primary">Pincel</button>
+        <button class="btn btn-primary">Borrador</button>
+        <button class="btn btn-primary">Limpiar</button>
+    </div>
+    <div class="grid">
+
+    </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
