--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
     <div>
         <h1 style="text-align: center;">Etch-a-Sketch</h1>
     </div>
-    <div class="botones">
-        <button class="btn btn-primary">Color</button>
-        <button class="btn btn-primary">Arcoiris</button>
-        <button class="btn btn-primary">Pincel</button>
-        <button class="btn btn-primary">Borrador</button>
-        <button class="btn btn-primary">Limpiar</button>
-    </div>
-    <div class="grid">
+    <main class="contenedor">
+        <div class="botones">
+            <button class="btn btn-primary">Color</button>
+            <button class="btn btn-primary">Arcoiris</button>
+            <button class="btn btn-primary">Pincel</button>
+            <button class="btn btn-primary">Borrador</button>
+            <button class="btn btn-primary">Limpiar</button>
+        </div>
+        <div class="grid">
 
-    </div>
+        </div>
+    </main>
+
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
