IDs a todos los botones

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </div>
     <main class="contenedor">
         <div class="botones">
-            <button class="btn btn-primary">Color</button>
-            <button class="btn btn-primary">Arcoiris</button>
-            <button class="btn btn-primary">Pincel</button>
-            <button class="btn btn-primary">Borrador</button>
-            <button class="btn btn-primary">Limpiar</button>
+            <button id="colorBtn" class="btn btn-primary">Color</button>
+            <button id="arcoirisBtn" class="btn btn-primary">Arcoiris</button>
+            <button id="pincelBtn" class="btn btn-primary">Pincel</button>
+            <button id="borradorBtn" class="btn btn-primary">Borrador</button>
+            <button id="limpiarBtn" class="btn btn-primary">Limpiar</button>
         </div>
         <div class="grid">
 
