cambios finales, ahora el grid cambia de tamaño

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <button id="pincelBtn" class="btn btn-primary">Pincel</button>
             <button id="borradorBtn" class="btn btn-primary">Borrador</button>
             <button id="limpiarBtn" class="btn btn-primary">Limpiar</button>
+            <div class="slidecontainer">
+                <input type="range" min="4" max="64" value="16" class="slider" id="myRange">
+                <p class="grid-size">16 x 16</p>
+            </div>
         </div>
         <div class="grid">
 
